--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     container_name: markeable-backend
     ports:
       - "8000:8000"
-        env_file:
-      - .env  # Ensures the .env file is loaded into the contain
+    env_file:
+      - .env  # Ensures the .env file is loaded into the container
     environment:
       - DB_HOST=${DB_HOST}
       - DB_PORT=${DB_PORT}
@@ -35,4 +35,3 @@ services:
 
 volumes:
   postgres_data:
-
